# rive-tizen

./: .gitmodules  README.md  make_skia.sh  make_submodules_static.sh  meson.build  meson_options.txt
inc/: meson.build  skia_factory.hpp  skia_renderer.hpp  to_skia.hpp
packaging/: rive-tizen.spec
src/: meson.build  skia_factory.cpp
viewer/: meson.build  meson_options.txt  viewer_cpu.cpp  viewer_gpu.cpp
