project('rive-tizen',
        'cpp',
        default_options : ['cpp_std=c++17'],
        version : '0.2.0',
        license : 'MIT')

cc = meson.get_compiler('cpp')

if get_option('install_headers') == true
   install_headers([
      'submodule/rive-cpp/include/rive/animation/animation_state_instance.hpp',
      'submodule/rive-cpp/include/rive/animation/animation_state.hpp',
      'submodule/rive-cpp/include/rive/animation/animation.hpp',
      'submodule/rive-cpp/include/rive/animation/any_state.hpp',
      'submodule/rive-cpp/include/rive/animation/blend_animation_1d.hpp',
      'submodule/rive-cpp/include/rive/animation/blend_animation_direct.hpp',
      'submodule/rive-cpp/include/rive/animation/blend_animation.hpp',
      'submodule/rive-cpp/include/rive/animation/blend_state_1d_instance.hpp',
      'submodule/rive-cpp/include/rive/animation/blend_state_1d.hpp',
      'submodule/rive-cpp/include/rive/animation/blend_state_direct_instance.hpp',
      'submodule/rive-cpp/include/rive/animation/blend_state_direct.hpp',
      'submodule/rive-cpp/include/rive/animation/blend_state_instance.hpp',
      'submodule/rive-cpp/include/rive/animation/blend_state_transition.hpp',
      'submodule/rive-cpp/include/rive/animation/blend_state.hpp',
      'submodule/rive-cpp/include/rive/animation/cubic_interpolator.hpp',
      'submodule/rive-cpp/include/rive/animation/entry_state.hpp',
      'submodule/rive-cpp/include/rive/animation/event_bool_change.hpp',
      'submodule/rive-cpp/include/rive/animation/event_input_change.hpp',
      'submodule/rive-cpp/include/rive/animation/event_number_change.hpp',
      'submodule/rive-cpp/include/rive/animation/event_trigger_change.hpp',
      'submodule/rive-cpp/include/rive/animation/exit_state.hpp',
      'submodule/rive-cpp/include/rive/animation/keyed_object.hpp',
      'submodule/rive-cpp/include/rive/animation/keyed_property.hpp',
      'submodule/rive-cpp/include/rive/animation/keyframe_bool.hpp',
      'submodule/rive-cpp/include/rive/animation/keyframe_color.hpp',
      'submodule/rive-cpp/include/rive/animation/keyframe_double.hpp',
      'submodule/rive-cpp/include/rive/animation/keyframe_id.hpp',
      'submodule/rive-cpp/include/rive/animation/keyframe.hpp',
      'submodule/rive-cpp/include/rive/animation/layer_state.hpp',
      'submodule/rive-cpp/include/rive/animation/linear_animation_instance.hpp',
      'submodule/rive-cpp/include/rive/animation/linear_animation.hpp',
      'submodule/rive-cpp/include/rive/animation/loop.hpp',
      'submodule/rive-cpp/include/rive/animation/nested_linear_animation.hpp',
      'submodule/rive-cpp/include/rive/animation/nested_remap_animation.hpp',
      'submodule/rive-cpp/include/rive/animation/nested_simple_animation.hpp',
      'submodule/rive-cpp/include/rive/animation/nested_state_machine.hpp',
      'submodule/rive-cpp/include/rive/animation/state_instance.hpp',
      'submodule/rive-cpp/include/rive/animation/state_machine_bool.hpp',
      'submodule/rive-cpp/include/rive/animation/state_machine_component.hpp',
      'submodule/rive-cpp/include/rive/animation/state_machine_event.hpp',
      'submodule/rive-cpp/include/rive/animation/state_machine_input_instance.hpp',
      'submodule/rive-cpp/include/rive/animation/state_machine_input.hpp',
      'submodule/rive-cpp/include/rive/animation/state_machine_instance.hpp',
      'submodule/rive-cpp/include/rive/animation/state_machine_layer_component.hpp',
      'submodule/rive-cpp/include/rive/animation/state_machine_layer.hpp',
      'submodule/rive-cpp/include/rive/animation/state_machine_number.hpp',
      'submodule/rive-cpp/include/rive/animation/state_machine_trigger.hpp',
      'submodule/rive-cpp/include/rive/animation/state_machine.hpp',
      'submodule/rive-cpp/include/rive/animation/state_transition_flags.hpp',
      'submodule/rive-cpp/include/rive/animation/state_transition.hpp',
      'submodule/rive-cpp/include/rive/animation/system_state_instance.hpp',
      'submodule/rive-cpp/include/rive/animation/transition_bool_condition.hpp',
      'submodule/rive-cpp/include/rive/animation/transition_condition_op.hpp',
      'submodule/rive-cpp/include/rive/animation/transition_condition.hpp',
      'submodule/rive-cpp/include/rive/animation/transition_number_condition.hpp',
      'submodule/rive-cpp/include/rive/animation/transition_trigger_condition.hpp',
      'submodule/rive-cpp/include/rive/animation/transition_value_condition.hpp',
   ], subdir: 'rive/animation')
   install_headers([
      'submodule/rive-cpp/include/rive/assets/asset.hpp',
      'submodule/rive-cpp/include/rive/assets/drawable_asset.hpp',
      'submodule/rive-cpp/include/rive/assets/file_asset_contents.hpp',
      'submodule/rive-cpp/include/rive/assets/file_asset_referencer.hpp',
      'submodule/rive-cpp/include/rive/assets/file_asset.hpp',
      'submodule/rive-cpp/include/rive/assets/folder.hpp',
      'submodule/rive-cpp/include/rive/assets/image_asset.hpp',
   ], subdir: 'rive/assets')
   install_headers([
      'submodule/rive-cpp/include/rive/bones/bone.hpp',
      'submodule/rive-cpp/include/rive/bones/cubic_weight.hpp',
      'submodule/rive-cpp/include/rive/bones/root_bone.hpp',
      'submodule/rive-cpp/include/rive/bones/skeletal_component.hpp',
      'submodule/rive-cpp/include/rive/bones/skin.hpp',
      'submodule/rive-cpp/include/rive/bones/skinnable.hpp',
      'submodule/rive-cpp/include/rive/bones/tendon.hpp',
      'submodule/rive-cpp/include/rive/bones/weight.hpp',
   ], subdir: 'rive/bones')
   install_headers([
      'submodule/rive-cpp/include/rive/constraints/constraint.hpp',
      'submodule/rive-cpp/include/rive/constraints/distance_constraint.hpp',
      'submodule/rive-cpp/include/rive/constraints/ik_constraint.hpp',
      'submodule/rive-cpp/include/rive/constraints/rotation_constraint.hpp',
      'submodule/rive-cpp/include/rive/constraints/scale_constraint.hpp',
      'submodule/rive-cpp/include/rive/constraints/targeted_constraint.hpp',
      'submodule/rive-cpp/include/rive/constraints/transform_component_constraint_y.hpp',
      'submodule/rive-cpp/include/rive/constraints/transform_component_constraint.hpp',
      'submodule/rive-cpp/include/rive/constraints/transform_constraint.hpp',
      'submodule/rive-cpp/include/rive/constraints/transform_space_constraint.hpp',
      'submodule/rive-cpp/include/rive/constraints/translation_constraint.hpp',
   ], subdir: 'rive/constraints')
   install_headers([
      'submodule/rive-cpp/include/rive/core/binary_reader.hpp',
      'submodule/rive-cpp/include/rive/core/type_conversions.hpp',
   ], subdir: 'rive/core')
   install_headers([
      'submodule/rive-cpp/include/rive/core/field_types/core_bool_type.hpp',
      'submodule/rive-cpp/include/rive/core/field_types/core_bytes_type.hpp',
      'submodule/rive-cpp/include/rive/core/field_types/core_color_type.hpp',
      'submodule/rive-cpp/include/rive/core/field_types/core_double_type.hpp',
      'submodule/rive-cpp/include/rive/core/field_types/core_string_type.hpp',
      'submodule/rive-cpp/include/rive/core/field_types/core_uint_type.hpp',
   ], subdir: 'rive/core/field_types')
   install_headers([
      'submodule/rive-cpp/include/rive/generated/animation/animation_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/animation_state_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/any_state_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/blend_animation_1d_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/blend_animation_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/blend_animation_direct_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/blend_state_1d_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/blend_state_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/blend_state_direct_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/blend_state_transition_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/cubic_interpolator_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/entry_state_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/event_bool_change_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/event_input_change_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/event_number_change_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/event_trigger_change_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/exit_state_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/keyed_object_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/keyed_property_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/keyframe_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/keyframe_bool_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/keyframe_color_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/keyframe_double_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/keyframe_id_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/layer_state_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/linear_animation_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/nested_linear_animation_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/nested_remap_animation_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/nested_simple_animation_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/nested_state_machine_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/state_machine_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/state_machine_bool_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/state_machine_component_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/state_machine_event_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/state_machine_input_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/state_machine_layer_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/state_machine_layer_component_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/state_machine_number_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/state_machine_trigger_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/state_transition_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/transition_bool_condition_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/transition_condition_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/transition_number_condition_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/transition_trigger_condition_base.hpp',
      'submodule/rive-cpp/include/rive/generated/animation/transition_value_condition_base.hpp',
   ], subdir: 'rive/generated/animation')
   install_headers([
      'submodule/rive-cpp/include/rive/generated/assets/asset_base.hpp',
      'submodule/rive-cpp/include/rive/generated/assets/drawable_asset_base.hpp',
      'submodule/rive-cpp/include/rive/generated/assets/file_asset_base.hpp',
      'submodule/rive-cpp/include/rive/generated/assets/file_asset_contents_base.hpp',
      'submodule/rive-cpp/include/rive/generated/assets/folder_base.hpp',
      'submodule/rive-cpp/include/rive/generated/assets/image_asset_base.hpp',
   ], subdir: 'rive/generated/assets')
   install_headers([
      'submodule/rive-cpp/include/rive/generated/bones/bone_base.hpp',
      'submodule/rive-cpp/include/rive/generated/bones/cubic_weight_base.hpp',
      'submodule/rive-cpp/include/rive/generated/bones/root_bone_base.hpp',
      'submodule/rive-cpp/include/rive/generated/bones/skeletal_component_base.hpp',
      'submodule/rive-cpp/include/rive/generated/bones/skin_base.hpp',
      'submodule/rive-cpp/include/rive/generated/bones/tendon_base.hpp',
      'submodule/rive-cpp/include/rive/generated/bones/weight_base.hpp',
   ], subdir: 'rive/generated/bones')
   install_headers([
      'submodule/rive-cpp/include/rive/generated/constraints/constraint_base.hpp',
      'submodule/rive-cpp/include/rive/generated/constraints/distance_constraint_base.hpp',
      'submodule/rive-cpp/include/rive/generated/constraints/ik_constraint_base.hpp',
      'submodule/rive-cpp/include/rive/generated/constraints/rotation_constraint_base.hpp',
      'submodule/rive-cpp/include/rive/generated/constraints/scale_constraint_base.hpp',
      'submodule/rive-cpp/include/rive/generated/constraints/targeted_constraint_base.hpp',
      'submodule/rive-cpp/include/rive/generated/constraints/transform_component_constraint_base.hpp',
      'submodule/rive-cpp/include/rive/generated/constraints/transform_component_constraint_y_base.hpp',
      'submodule/rive-cpp/include/rive/generated/constraints/transform_constraint_base.hpp',
      'submodule/rive-cpp/include/rive/generated/constraints/transform_space_constraint_base.hpp',
      'submodule/rive-cpp/include/rive/generated/constraints/translation_constraint_base.hpp',
   ], subdir: 'rive/generated/constraints')
   install_headers([
      'submodule/rive-cpp/include/rive/generated/shapes/paint/fill_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/paint/gradient_stop_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/paint/linear_gradient_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/paint/radial_gradient_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/paint/shape_paint_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/paint/solid_color_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/paint/stroke_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/paint/trim_path_base.hpp',
   ], subdir: 'rive/generated/shapes/paint')
   install_headers([
      'submodule/rive-cpp/include/rive/generated/shapes/clipping_shape_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/contour_mesh_vertex_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/cubic_asymmetric_vertex_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/cubic_detached_vertex_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/cubic_mirrored_vertex_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/cubic_vertex_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/ellipse_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/image_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/mesh_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/mesh_vertex_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/parametric_path_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/path_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/path_vertex_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/points_path_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/polygon_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/rectangle_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/shape_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/star_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/straight_vertex_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/triangle_base.hpp',
      'submodule/rive-cpp/include/rive/generated/shapes/vertex_base.hpp',
   ], subdir: 'rive/generated/shapes')
   install_headers([
      'submodule/rive-cpp/include/rive/generated/artboard_base.hpp',
      'submodule/rive-cpp/include/rive/generated/backboard_base.hpp',
      'submodule/rive-cpp/include/rive/generated/component_base.hpp',
      'submodule/rive-cpp/include/rive/generated/container_component_base.hpp',
      'submodule/rive-cpp/include/rive/generated/core_registry.hpp',
      'submodule/rive-cpp/include/rive/generated/draw_rules_base.hpp',
      'submodule/rive-cpp/include/rive/generated/draw_target_base.hpp',
      'submodule/rive-cpp/include/rive/generated/drawable_base.hpp',
      'submodule/rive-cpp/include/rive/generated/nested_animation_base.hpp',
      'submodule/rive-cpp/include/rive/generated/nested_artboard_base.hpp',
      'submodule/rive-cpp/include/rive/generated/node_base.hpp',
      'submodule/rive-cpp/include/rive/generated/transform_component_base.hpp',
      'submodule/rive-cpp/include/rive/generated/world_transform_component_base.hpp',
   ], subdir: 'rive/generated')
   install_headers([
      'submodule/rive-cpp/include/rive/importers/artboard_importer.hpp',
      'submodule/rive-cpp/include/rive/importers/backboard_importer.hpp',
      'submodule/rive-cpp/include/rive/importers/file_asset_importer.hpp',
      'submodule/rive-cpp/include/rive/importers/import_stack.hpp',
      'submodule/rive-cpp/include/rive/importers/keyed_object_importer.hpp',
      'submodule/rive-cpp/include/rive/importers/keyed_property_importer.hpp',
      'submodule/rive-cpp/include/rive/importers/layer_state_importer.hpp',
      'submodule/rive-cpp/include/rive/importers/linear_animation_importer.hpp',
      'submodule/rive-cpp/include/rive/importers/state_machine_event_importer.hpp',
      'submodule/rive-cpp/include/rive/importers/state_machine_importer.hpp',
      'submodule/rive-cpp/include/rive/importers/state_machine_layer_importer.hpp',
      'submodule/rive-cpp/include/rive/importers/state_transition_importer.hpp',
   ], subdir: 'rive/importers')
   install_headers([
      'submodule/rive-cpp/include/rive/math/aabb.hpp',
      'submodule/rive-cpp/include/rive/math/circle_constant.hpp',
      'submodule/rive-cpp/include/rive/math/color.hpp',
      'submodule/rive-cpp/include/rive/math/hit_test.hpp',
      'submodule/rive-cpp/include/rive/math/mat2d.hpp',
      'submodule/rive-cpp/include/rive/math/math_types.hpp',
      'submodule/rive-cpp/include/rive/math/path_types.hpp',
      'submodule/rive-cpp/include/rive/math/raw_path.hpp',
      'submodule/rive-cpp/include/rive/math/transform_components.hpp',
      'submodule/rive-cpp/include/rive/math/vec2d.hpp',
   ], subdir: 'rive/math')
   install_headers([
      'submodule/rive-cpp/include/rive/shapes/clipping_shape.hpp',
      'submodule/rive-cpp/include/rive/shapes/contour_mesh_vertex.hpp',
      'submodule/rive-cpp/include/rive/shapes/cubic_asymmetric_vertex.hpp',
      'submodule/rive-cpp/include/rive/shapes/cubic_detached_vertex.hpp',
      'submodule/rive-cpp/include/rive/shapes/cubic_mirrored_vertex.hpp',
      'submodule/rive-cpp/include/rive/shapes/cubic_vertex.hpp',
      'submodule/rive-cpp/include/rive/shapes/ellipse.hpp',
      'submodule/rive-cpp/include/rive/shapes/image.hpp',
      'submodule/rive-cpp/include/rive/shapes/mesh_vertex.hpp',
      'submodule/rive-cpp/include/rive/shapes/mesh.hpp',
      'submodule/rive-cpp/include/rive/shapes/metrics_path.hpp',
      'submodule/rive-cpp/include/rive/shapes/parametric_path.hpp',
      'submodule/rive-cpp/include/rive/shapes/path_composer.hpp',
      'submodule/rive-cpp/include/rive/shapes/path_space.hpp',
      'submodule/rive-cpp/include/rive/shapes/path_vertex.hpp',
      'submodule/rive-cpp/include/rive/shapes/path.hpp',
      'submodule/rive-cpp/include/rive/shapes/points_path.hpp',
      'submodule/rive-cpp/include/rive/shapes/polygon.hpp',
      'submodule/rive-cpp/include/rive/shapes/rectangle.hpp',
      'submodule/rive-cpp/include/rive/shapes/shape_paint_container.hpp',
      'submodule/rive-cpp/include/rive/shapes/shape.hpp',
      'submodule/rive-cpp/include/rive/shapes/star.hpp',
      'submodule/rive-cpp/include/rive/shapes/straight_vertex.hpp',
      'submodule/rive-cpp/include/rive/shapes/triangle.hpp',
      'submodule/rive-cpp/include/rive/shapes/vertex.hpp',
   ], subdir: 'rive/shapes')
   install_headers([
      'submodule/rive-cpp/include/rive/shapes/paint/blend_mode.hpp',
      'submodule/rive-cpp/include/rive/shapes/paint/color.hpp',
      'submodule/rive-cpp/include/rive/shapes/paint/fill.hpp',
      'submodule/rive-cpp/include/rive/shapes/paint/gradient_stop.hpp',
      'submodule/rive-cpp/include/rive/shapes/paint/linear_gradient.hpp',
      'submodule/rive-cpp/include/rive/shapes/paint/radial_gradient.hpp',
      'submodule/rive-cpp/include/rive/shapes/paint/shape_paint_mutator.hpp',
      'submodule/rive-cpp/include/rive/shapes/paint/shape_paint.hpp',
      'submodule/rive-cpp/include/rive/shapes/paint/solid_color.hpp',
      'submodule/rive-cpp/include/rive/shapes/paint/stroke_cap.hpp',
      'submodule/rive-cpp/include/rive/shapes/paint/stroke_effect.hpp',
      'submodule/rive-cpp/include/rive/shapes/paint/stroke_join.hpp',
      'submodule/rive-cpp/include/rive/shapes/paint/stroke.hpp',
      'submodule/rive-cpp/include/rive/shapes/paint/trim_path.hpp',
   ], subdir: 'rive/shapes/paint')
   install_headers([
      'submodule/rive-cpp/include/rive/artboard.hpp',
      'submodule/rive-cpp/include/rive/backboard.hpp',
      'submodule/rive-cpp/include/rive/command_path.hpp',
      'submodule/rive-cpp/include/rive/component_dirt.hpp',
      'submodule/rive-cpp/include/rive/component.hpp',
      'submodule/rive-cpp/include/rive/container_component.hpp',
      'submodule/rive-cpp/include/rive/core_context.hpp',
      'submodule/rive-cpp/include/rive/core.hpp',
      'submodule/rive-cpp/include/rive/dependency_sorter.hpp',
      'submodule/rive-cpp/include/rive/draw_rules.hpp',
      'submodule/rive-cpp/include/rive/draw_target_placement.hpp',
      'submodule/rive-cpp/include/rive/draw_target.hpp',
      'submodule/rive-cpp/include/rive/drawable.hpp',
      'submodule/rive-cpp/include/rive/event_type.hpp',
      'submodule/rive-cpp/include/rive/factory.hpp',
      'submodule/rive-cpp/include/rive/file_asset_resolver.hpp',
      'submodule/rive-cpp/include/rive/file.hpp',
      'submodule/rive-cpp/include/rive/hit_info.hpp',
      'submodule/rive-cpp/include/rive/hittest_command_path.hpp',
      'submodule/rive-cpp/include/rive/layout.hpp',
      'submodule/rive-cpp/include/rive/nested_animation.hpp',
      'submodule/rive-cpp/include/rive/nested_artboard.hpp',
      'submodule/rive-cpp/include/rive/node.hpp',
      'submodule/rive-cpp/include/rive/pointer_event.hpp',
      'submodule/rive-cpp/include/rive/refcnt.hpp',
      'submodule/rive-cpp/include/rive/relative_local_asset_resolver.hpp',
      'submodule/rive-cpp/include/rive/renderer.hpp',
      'submodule/rive-cpp/include/rive/rive_types.hpp',
      'submodule/rive-cpp/include/rive/runtime_header.hpp',
      'submodule/rive-cpp/include/rive/scene.hpp',
      'submodule/rive-cpp/include/rive/span.hpp',
      'submodule/rive-cpp/include/rive/status_code.hpp',
      'submodule/rive-cpp/include/rive/transform_component.hpp',
      'submodule/rive-cpp/include/rive/transform_space.hpp',
      'submodule/rive-cpp/include/rive/world_transform_component.hpp',
   ], subdir: 'rive')

   install_headers([
      'submodule/skia/include/core/SkCanvas.h',
      'submodule/skia/include/core/SkColorSpace.h',
      'submodule/skia/include/core/SkSurface.h',
      'submodule/skia/include/core/SkTypes.h',
   ], subdir: 'skia')

   install_headers([
      'submodule/skia/include/core/SkAlphaType.h',
      'submodule/skia/include/core/SkAnnotation.h',
      'submodule/skia/include/core/SkBBHFactory.h',
      'submodule/skia/include/core/SkBitmap.h',
      'submodule/skia/include/core/SkBlender.h',
      'submodule/skia/include/core/SkBlendMode.h',
      'submodule/skia/include/core/SkBlurTypes.h',
      'submodule/skia/include/core/SkCanvas.h',
      'submodule/skia/include/core/SkCanvasVirtualEnforcer.h',
      'submodule/skia/include/core/SkCapabilities.h',
      'submodule/skia/include/core/SkClipOp.h',
      'submodule/skia/include/core/SkColor.h',
      'submodule/skia/include/core/SkColorFilter.h',
      'submodule/skia/include/core/SkColorPriv.h',
      'submodule/skia/include/core/SkColorSpace.h',
      'submodule/skia/include/core/SkColorType.h',
      'submodule/skia/include/core/SkCombinationBuilder.h',
      'submodule/skia/include/core/SkContourMeasure.h',
      'submodule/skia/include/core/SkCoverageMode.h',
      'submodule/skia/include/core/SkCubicMap.h',
      'submodule/skia/include/core/SkData.h',
      'submodule/skia/include/core/SkDataTable.h',
      'submodule/skia/include/core/SkDeferredDisplayList.h',
      'submodule/skia/include/core/SkDeferredDisplayListRecorder.h',
      'submodule/skia/include/core/SkDocument.h',
      'submodule/skia/include/core/SkDrawable.h',
      'submodule/skia/include/core/SkDrawLooper.h',
      'submodule/skia/include/core/SkEncodedImageFormat.h',
      'submodule/skia/include/core/SkExecutor.h',
      'submodule/skia/include/core/SkFlattenable.h',
      'submodule/skia/include/core/SkFont.h',
      'submodule/skia/include/core/SkFontArguments.h',
      'submodule/skia/include/core/SkFontMetrics.h',
      'submodule/skia/include/core/SkFontMgr.h',
      'submodule/skia/include/core/SkFontParameters.h',
      'submodule/skia/include/core/SkFontStyle.h',
      'submodule/skia/include/core/SkFontTypes.h',
      'submodule/skia/include/core/SkGraphics.h',
      'submodule/skia/include/core/SkICC.h',
      'submodule/skia/include/core/SkImage.h',
      'submodule/skia/include/core/SkImageEncoder.h',
      'submodule/skia/include/core/SkImageFilter.h',
      'submodule/skia/include/core/SkImageGenerator.h',
      'submodule/skia/include/core/SkImageInfo.h',
      'submodule/skia/include/core/SkM44.h',
      'submodule/skia/include/core/SkMallocPixelRef.h',
      'submodule/skia/include/core/SkMaskFilter.h',
      'submodule/skia/include/core/SkMath.h',
      'submodule/skia/include/core/SkMatrix.h',
      'submodule/skia/include/core/SkMesh.h',
      'submodule/skia/include/core/SkMilestone.h',
      'submodule/skia/include/core/SkOpenTypeSVGDecoder.h',
      'submodule/skia/include/core/SkOverdrawCanvas.h',
      'submodule/skia/include/core/SkPaint.h',
      'submodule/skia/include/core/SkPath.h',
      'submodule/skia/include/core/SkPathBuilder.h',
      'submodule/skia/include/core/SkPathEffect.h',
      'submodule/skia/include/core/SkPathMeasure.h',
      'submodule/skia/include/core/SkPathTypes.h',
      'submodule/skia/include/core/SkPicture.h',
      'submodule/skia/include/core/SkPictureRecorder.h',
      'submodule/skia/include/core/SkPixelRef.h',
      'submodule/skia/include/core/SkPixmap.h',
      'submodule/skia/include/core/SkPngChunkReader.h',
      'submodule/skia/include/core/SkPoint.h',
      'submodule/skia/include/core/SkPoint3.h',
      'submodule/skia/include/core/SkPromiseImageTexture.h',
      'submodule/skia/include/core/SkRasterHandleAllocator.h',
      'submodule/skia/include/core/SkRect.h',
      'submodule/skia/include/core/SkRefCnt.h',
      'submodule/skia/include/core/SkRegion.h',
      'submodule/skia/include/core/SkRRect.h',
      'submodule/skia/include/core/SkRSXform.h',
      'submodule/skia/include/core/SkSamplingOptions.h',
      'submodule/skia/include/core/SkScalar.h',
      'submodule/skia/include/core/SkSerialProcs.h',
      'submodule/skia/include/core/SkShader.h',
      'submodule/skia/include/core/SkSize.h',
      'submodule/skia/include/core/SkSpan.h',
      'submodule/skia/include/core/SkStream.h',
      'submodule/skia/include/core/SkString.h',
      'submodule/skia/include/core/SkStrokeRec.h',
      'submodule/skia/include/core/SkSurface.h',
      'submodule/skia/include/core/SkSurfaceCharacterization.h',
      'submodule/skia/include/core/SkSurfaceProps.h',
      'submodule/skia/include/core/SkSwizzle.h',
      'submodule/skia/include/core/SkTextBlob.h',
      'submodule/skia/include/core/SkTileMode.h',
      'submodule/skia/include/core/SkTime.h',
      'submodule/skia/include/core/SkTraceMemoryDump.h',
      'submodule/skia/include/core/SkTypeface.h',
      'submodule/skia/include/core/SkTypes.h',
      'submodule/skia/include/core/SkUnPreMultiply.h',
      'submodule/skia/include/core/SkVertices.h',
      'submodule/skia/include/core/SkYUVAInfo.h',
      'submodule/skia/include/core/SkYUVAPixmaps.h',
   ], subdir: 'include/core')
   install_headers([
      'submodule/skia/include/config/SkUserConfig.h',
   ], subdir: 'include/config')
   install_headers([
      'submodule/skia/include/private/SingleOwner.h',
      'submodule/skia/include/private/SkBitmaskEnum.h',
      'submodule/skia/include/private/SkChecksum.h',
      'submodule/skia/include/private/SkColorData.h',
      'submodule/skia/include/private/SkDeque.h',
      'submodule/skia/include/private/SkEncodedInfo.h',
      'submodule/skia/include/private/SkFixed.h',
      'submodule/skia/include/private/SkFloatBits.h',
      'submodule/skia/include/private/SkFloatingPoint.h',
      'submodule/skia/include/private/SkHalf.h',
      'submodule/skia/include/private/SkIDChangeListener.h',
      'submodule/skia/include/private/SkImageInfoPriv.h',
      'submodule/skia/include/private/SkMacros.h',
      'submodule/skia/include/private/SkMalloc.h',
      'submodule/skia/include/private/SkMutex.h',
      'submodule/skia/include/private/SkNoncopyable.h',
      'submodule/skia/include/private/SkOnce.h',
      'submodule/skia/include/private/SkOpts_spi.h',
      'submodule/skia/include/private/SkPathRef.h',
      'submodule/skia/include/private/SkSafe_math.h',
      'submodule/skia/include/private/SkSafe32.h',
      'submodule/skia/include/private/SkSemaphore.h',
      'submodule/skia/include/private/SkShadowFlags.h',
      'submodule/skia/include/private/SkSLDefines.h',
      'submodule/skia/include/private/SkSLIRNode.h',
      'submodule/skia/include/private/SkSLLayout.h',
      'submodule/skia/include/private/SkSLModifiers.h',
      'submodule/skia/include/private/SkSLProgramElement.h',
      'submodule/skia/include/private/SkSLProgramKind.h',
      'submodule/skia/include/private/SkSLSampleUsage.h',
      'submodule/skia/include/private/SkSLStatement.h',
      'submodule/skia/include/private/SkSLString.h',
      'submodule/skia/include/private/SkSLSymbol.h',
      'submodule/skia/include/private/SkSpinlock.h',
      'submodule/skia/include/private/SkStringView.h',
      'submodule/skia/include/private/SkTArray.h',
      'submodule/skia/include/private/SkTDArray.h',
      'submodule/skia/include/private/SkTemplates.h',
      'submodule/skia/include/private/SkTFitsIn.h',
      'submodule/skia/include/private/SkTHash.h',
      'submodule/skia/include/private/SkThreadAnnotations.h',
      'submodule/skia/include/private/SkThreadID.h',
      'submodule/skia/include/private/SkTLogic.h',
      'submodule/skia/include/private/SkTo.h',
      'submodule/skia/include/private/SkTPin.h',
      'submodule/skia/include/private/SkUniquePaintParamsID.h',
      'submodule/skia/include/private/SkVx.h',
      'submodule/skia/include/private/SkWeakRefCnt.h',
   ], subdir: 'include/private')
   install_headers([
      'submodule/skia/include/gpu/GrSurfaceInfo.h',
      'submodule/skia/include/gpu/GpuTypes.h',
      'submodule/skia/include/gpu/GrYUVABackendTextures.h',
      'submodule/skia/include/gpu/GrConfig.h',
      'submodule/skia/include/gpu/GrBackendSurface.h',
      'submodule/skia/include/gpu/GrRecordingContext.h',
      'submodule/skia/include/gpu/GrBackendSemaphore.h',
      'submodule/skia/include/gpu/GrDriverBugWorkaroundsAutogen.h',
      'submodule/skia/include/gpu/GrDriverBugWorkarounds.h',
      'submodule/skia/include/gpu/GrContextThreadSafeProxy.h',
      'submodule/skia/include/gpu/GrBackendSurfaceMutableState.h',
      'submodule/skia/include/gpu/GrTypes.h',
      'submodule/skia/include/gpu/ShaderErrorHandler.h',
      'submodule/skia/include/gpu/GrContextOptions.h',
      'submodule/skia/include/gpu/GrDirectContext.h',
      'submodule/skia/include/gpu/GrBackendDrawableInfo.h',
   ], subdir: 'include/gpu')
   install_headers([
      'submodule/skia/include/gpu/gl/GrGLConfig_chrome.h',
      'submodule/skia/include/gpu/gl/GrGLAssembleInterface.h',
      'submodule/skia/include/gpu/gl/glx/GrGLMakeGLXInterface.h',
      'submodule/skia/include/gpu/gl/GrGLConfig.h',
      'submodule/skia/include/gpu/gl/GrGLInterface.h',
      'submodule/skia/include/gpu/gl/GrGLFunctions.h',
      'submodule/skia/include/gpu/gl/GrGLAssembleHelpers.h',
      'submodule/skia/include/gpu/gl/GrGLTypes.h',
      'submodule/skia/include/gpu/gl/GrGLExtensions.h',
   ], subdir: 'include/gpu/gl')
endif

rive_cpp_src = [
   'submodule/rive-cpp/src/animation/animation_state_instance.cpp',
   'submodule/rive-cpp/src/animation/animation_state.cpp',
   'submodule/rive-cpp/src/animation/blend_animation_1d.cpp',
   'submodule/rive-cpp/src/animation/blend_animation_direct.cpp',
   'submodule/rive-cpp/src/animation/blend_animation.cpp',
   'submodule/rive-cpp/src/animation/blend_state_1d_instance.cpp',
   'submodule/rive-cpp/src/animation/blend_state_1d.cpp',
   'submodule/rive-cpp/src/animation/blend_state_direct_instance.cpp',
   'submodule/rive-cpp/src/animation/blend_state_direct.cpp',
   'submodule/rive-cpp/src/animation/blend_state_transition.cpp',
   'submodule/rive-cpp/src/animation/blend_state.cpp',
   'submodule/rive-cpp/src/animation/cubic_interpolator.cpp',
   'submodule/rive-cpp/src/animation/event_bool_change.cpp',
   'submodule/rive-cpp/src/animation/event_input_change.cpp',
   'submodule/rive-cpp/src/animation/event_number_change.cpp',
   'submodule/rive-cpp/src/animation/event_trigger_change.cpp',
   'submodule/rive-cpp/src/animation/keyed_object.cpp',
   'submodule/rive-cpp/src/animation/keyed_property.cpp',
   'submodule/rive-cpp/src/animation/keyframe_bool.cpp',
   'submodule/rive-cpp/src/animation/keyframe_color.cpp',
   'submodule/rive-cpp/src/animation/keyframe_double.cpp',
   'submodule/rive-cpp/src/animation/keyframe_id.cpp',
   'submodule/rive-cpp/src/animation/keyframe.cpp',
   'submodule/rive-cpp/src/animation/layer_state.cpp',
   'submodule/rive-cpp/src/animation/linear_animation_instance.cpp',
   'submodule/rive-cpp/src/animation/linear_animation.cpp',
   'submodule/rive-cpp/src/animation/nested_animation.cpp',
   'submodule/rive-cpp/src/animation/nested_linear_animation.cpp',
   'submodule/rive-cpp/src/animation/nested_remap_animation.cpp',
   'submodule/rive-cpp/src/animation/nested_simple_animation.cpp',
   'submodule/rive-cpp/src/animation/nested_state_machine.cpp',
   'submodule/rive-cpp/src/animation/state_instance.cpp',
   'submodule/rive-cpp/src/animation/state_machine_event.cpp',
   'submodule/rive-cpp/src/animation/state_machine_input_instance.cpp',
   'submodule/rive-cpp/src/animation/state_machine_input.cpp',
   'submodule/rive-cpp/src/animation/state_machine_instance.cpp',
   'submodule/rive-cpp/src/animation/state_machine_layer.cpp',
   'submodule/rive-cpp/src/animation/state_machine.cpp',
   'submodule/rive-cpp/src/animation/state_transition.cpp',
   'submodule/rive-cpp/src/animation/system_state_instance.cpp',
   'submodule/rive-cpp/src/animation/transition_bool_condition.cpp',
   'submodule/rive-cpp/src/animation/transition_condition.cpp',
   'submodule/rive-cpp/src/animation/transition_number_condition.cpp',
   'submodule/rive-cpp/src/animation/transition_trigger_condition.cpp',
   'submodule/rive-cpp/src/artboard.cpp',
   'submodule/rive-cpp/src/assets/file_asset_contents.cpp',
   'submodule/rive-cpp/src/assets/file_asset.cpp',
   'submodule/rive-cpp/src/assets/image_asset.cpp',
   'submodule/rive-cpp/src/bones/bone.cpp',
   'submodule/rive-cpp/src/bones/root_bone.cpp',
   'submodule/rive-cpp/src/bones/skin.cpp',
   'submodule/rive-cpp/src/bones/skinnable.cpp',
   'submodule/rive-cpp/src/bones/tendon.cpp',
   'submodule/rive-cpp/src/bones/weight.cpp',
   'submodule/rive-cpp/src/component.cpp',
   'submodule/rive-cpp/src/constraints/constraint.cpp',
   'submodule/rive-cpp/src/constraints/distance_constraint.cpp',
   'submodule/rive-cpp/src/constraints/ik_constraint.cpp',
   'submodule/rive-cpp/src/constraints/rotation_constraint.cpp',
   'submodule/rive-cpp/src/constraints/scale_constraint.cpp',
   'submodule/rive-cpp/src/constraints/targeted_constraint.cpp',
   'submodule/rive-cpp/src/constraints/transform_constraint.cpp',
   'submodule/rive-cpp/src/constraints/translation_constraint.cpp',
   'submodule/rive-cpp/src/core/binary_reader.cpp',
   'submodule/rive-cpp/src/core/field_types/core_bool_type.cpp',
   'submodule/rive-cpp/src/core/field_types/core_bytes_type.cpp',
   'submodule/rive-cpp/src/core/field_types/core_color_type.cpp',
   'submodule/rive-cpp/src/core/field_types/core_double_type.cpp',
   'submodule/rive-cpp/src/core/field_types/core_string_type.cpp',
   'submodule/rive-cpp/src/core/field_types/core_uint_type.cpp',
   'submodule/rive-cpp/src/dependency_sorter.cpp',
   'submodule/rive-cpp/src/draw_rules.cpp',
   'submodule/rive-cpp/src/draw_target.cpp',
   'submodule/rive-cpp/src/drawable.cpp',
   'submodule/rive-cpp/src/file.cpp',
   'submodule/rive-cpp/src/generated/animation/animation_base.cpp',
   'submodule/rive-cpp/src/generated/animation/animation_state_base.cpp',
   'submodule/rive-cpp/src/generated/animation/any_state_base.cpp',
   'submodule/rive-cpp/src/generated/animation/blend_animation_1d_base.cpp',
   'submodule/rive-cpp/src/generated/animation/blend_animation_direct_base.cpp',
   'submodule/rive-cpp/src/generated/animation/blend_state_1d_base.cpp',
   'submodule/rive-cpp/src/generated/animation/blend_state_direct_base.cpp',
   'submodule/rive-cpp/src/generated/animation/blend_state_transition_base.cpp',
   'submodule/rive-cpp/src/generated/animation/cubic_interpolator_base.cpp',
   'submodule/rive-cpp/src/generated/animation/entry_state_base.cpp',
   'submodule/rive-cpp/src/generated/animation/event_bool_change_base.cpp',
   'submodule/rive-cpp/src/generated/animation/event_number_change_base.cpp',
   'submodule/rive-cpp/src/generated/animation/event_trigger_change_base.cpp',
   'submodule/rive-cpp/src/generated/animation/exit_state_base.cpp',
   'submodule/rive-cpp/src/generated/animation/keyed_object_base.cpp',
   'submodule/rive-cpp/src/generated/animation/keyed_property_base.cpp',
   'submodule/rive-cpp/src/generated/animation/keyframe_bool_base.cpp',
   'submodule/rive-cpp/src/generated/animation/keyframe_color_base.cpp',
   'submodule/rive-cpp/src/generated/animation/keyframe_double_base.cpp',
   'submodule/rive-cpp/src/generated/animation/keyframe_id_base.cpp',
   'submodule/rive-cpp/src/generated/animation/linear_animation_base.cpp',
   'submodule/rive-cpp/src/generated/animation/nested_remap_animation_base.cpp',
   'submodule/rive-cpp/src/generated/animation/nested_simple_animation_base.cpp',
   'submodule/rive-cpp/src/generated/animation/nested_state_machine_base.cpp',
   'submodule/rive-cpp/src/generated/animation/state_machine_base.cpp',
   'submodule/rive-cpp/src/generated/animation/state_machine_bool_base.cpp',
   'submodule/rive-cpp/src/generated/animation/state_machine_event_base.cpp',
   'submodule/rive-cpp/src/generated/animation/state_machine_layer_base.cpp',
   'submodule/rive-cpp/src/generated/animation/state_machine_number_base.cpp',
   'submodule/rive-cpp/src/generated/animation/state_machine_trigger_base.cpp',
   'submodule/rive-cpp/src/generated/animation/state_transition_base.cpp',
   'submodule/rive-cpp/src/generated/animation/transition_bool_condition_base.cpp',
   'submodule/rive-cpp/src/generated/animation/transition_number_condition_base.cpp',
   'submodule/rive-cpp/src/generated/animation/transition_trigger_condition_base.cpp',
   'submodule/rive-cpp/src/generated/artboard_base.cpp',
   'submodule/rive-cpp/src/generated/assets/file_asset_contents_base.cpp',
   'submodule/rive-cpp/src/generated/assets/folder_base.cpp',
   'submodule/rive-cpp/src/generated/assets/image_asset_base.cpp',
   'submodule/rive-cpp/src/generated/backboard_base.cpp',
   'submodule/rive-cpp/src/generated/bones/bone_base.cpp',
   'submodule/rive-cpp/src/generated/bones/cubic_weight_base.cpp',
   'submodule/rive-cpp/src/generated/bones/root_bone_base.cpp',
   'submodule/rive-cpp/src/generated/bones/skin_base.cpp',
   'submodule/rive-cpp/src/generated/bones/tendon_base.cpp',
   'submodule/rive-cpp/src/generated/bones/weight_base.cpp',
   'submodule/rive-cpp/src/generated/constraints/distance_constraint_base.cpp',
   'submodule/rive-cpp/src/generated/constraints/ik_constraint_base.cpp',
   'submodule/rive-cpp/src/generated/constraints/rotation_constraint_base.cpp',
   'submodule/rive-cpp/src/generated/constraints/scale_constraint_base.cpp',
   'submodule/rive-cpp/src/generated/constraints/transform_constraint_base.cpp',
   'submodule/rive-cpp/src/generated/constraints/translation_constraint_base.cpp',
   'submodule/rive-cpp/src/generated/draw_rules_base.cpp',
   'submodule/rive-cpp/src/generated/draw_target_base.cpp',
   'submodule/rive-cpp/src/generated/nested_artboard_base.cpp',
   'submodule/rive-cpp/src/generated/node_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/clipping_shape_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/contour_mesh_vertex_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/cubic_asymmetric_vertex_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/cubic_detached_vertex_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/cubic_mirrored_vertex_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/ellipse_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/image_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/mesh_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/mesh_vertex_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/paint/fill_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/paint/gradient_stop_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/paint/linear_gradient_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/paint/radial_gradient_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/paint/solid_color_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/paint/stroke_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/paint/trim_path_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/points_path_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/polygon_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/rectangle_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/shape_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/star_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/straight_vertex_base.cpp',
   'submodule/rive-cpp/src/generated/shapes/triangle_base.cpp',
   'submodule/rive-cpp/src/hittest_command_path.cpp',
   'submodule/rive-cpp/src/importers/artboard_importer.cpp',
   'submodule/rive-cpp/src/importers/backboard_importer.cpp',
   'submodule/rive-cpp/src/importers/file_asset_importer.cpp',
   'submodule/rive-cpp/src/importers/keyed_object_importer.cpp',
   'submodule/rive-cpp/src/importers/keyed_property_importer.cpp',
   'submodule/rive-cpp/src/importers/layer_state_importer.cpp',
   'submodule/rive-cpp/src/importers/linear_animation_importer.cpp',
   'submodule/rive-cpp/src/importers/state_machine_event_importer.cpp',
   'submodule/rive-cpp/src/importers/state_machine_importer.cpp',
   'submodule/rive-cpp/src/importers/state_machine_layer_importer.cpp',
   'submodule/rive-cpp/src/importers/state_transition_importer.cpp',
   'submodule/rive-cpp/src/layout.cpp',
   'submodule/rive-cpp/src/math/aabb.cpp',
   'submodule/rive-cpp/src/math/hit_test.cpp',
   'submodule/rive-cpp/src/math/mat2d.cpp',
   'submodule/rive-cpp/src/math/raw_path.cpp',
   'submodule/rive-cpp/src/math/vec2d.cpp',
   'submodule/rive-cpp/src/nested_artboard.cpp',
   'submodule/rive-cpp/src/node.cpp',
   'submodule/rive-cpp/src/renderer.cpp',
   'submodule/rive-cpp/src/scene.cpp',
   'submodule/rive-cpp/src/shapes/clipping_shape.cpp',
   'submodule/rive-cpp/src/shapes/cubic_asymmetric_vertex.cpp',
   'submodule/rive-cpp/src/shapes/cubic_detached_vertex.cpp',
   'submodule/rive-cpp/src/shapes/cubic_mirrored_vertex.cpp',
   'submodule/rive-cpp/src/shapes/cubic_vertex.cpp',
   'submodule/rive-cpp/src/shapes/ellipse.cpp',
   'submodule/rive-cpp/src/shapes/image.cpp',
   'submodule/rive-cpp/src/shapes/mesh_vertex.cpp',
   'submodule/rive-cpp/src/shapes/mesh.cpp',
   'submodule/rive-cpp/src/shapes/metrics_path.cpp',
   'submodule/rive-cpp/src/shapes/paint/color.cpp',
   'submodule/rive-cpp/src/shapes/paint/fill.cpp',
   'submodule/rive-cpp/src/shapes/paint/gradient_stop.cpp',
   'submodule/rive-cpp/src/shapes/paint/linear_gradient.cpp',
   'submodule/rive-cpp/src/shapes/paint/radial_gradient.cpp',
   'submodule/rive-cpp/src/shapes/paint/shape_paint_mutator.cpp',
   'submodule/rive-cpp/src/shapes/paint/shape_paint.cpp',
   'submodule/rive-cpp/src/shapes/paint/solid_color.cpp',
   'submodule/rive-cpp/src/shapes/paint/stroke.cpp',
   'submodule/rive-cpp/src/shapes/paint/trim_path.cpp',
   'submodule/rive-cpp/src/shapes/parametric_path.cpp',
   'submodule/rive-cpp/src/shapes/path_composer.cpp',
   'submodule/rive-cpp/src/shapes/path_vertex.cpp',
   'submodule/rive-cpp/src/shapes/path.cpp',
   'submodule/rive-cpp/src/shapes/points_path.cpp',
   'submodule/rive-cpp/src/shapes/polygon.cpp',
   'submodule/rive-cpp/src/shapes/rectangle.cpp',
   'submodule/rive-cpp/src/shapes/shape_paint_container.cpp',
   'submodule/rive-cpp/src/shapes/shape.cpp',
   'submodule/rive-cpp/src/shapes/star.cpp',
   'submodule/rive-cpp/src/shapes/straight_vertex.cpp',
   'submodule/rive-cpp/src/shapes/triangle.cpp',
   'submodule/rive-cpp/src/shapes/vertex.cpp',
   'submodule/rive-cpp/src/transform_component.cpp',
   'submodule/rive-cpp/src/world_transform_component.cpp'
]

rive_cpp_inc = include_directories('submodule/rive-cpp/include')

rive_cpp_dep = declare_dependency(
   include_directories : rive_cpp_inc,
   sources : rive_cpp_src,
)

skia_inc = include_directories('submodule/skia')
skia_inc_core = include_directories('submodule/skia/include/core')
skia_inc_effects = include_directories('submodule/skia/include/effects')

skia_inc_gpu = include_directories('submodule/skia/include/gpu')

skia_dir = meson.current_source_dir() + '/submodule/skia/out/Shared/'
skia_dep = cc.find_library('libskia', dirs : skia_dir, static: false)

headers = [include_directories('inc'), include_directories('src'), rive_cpp_inc, skia_inc, skia_inc_core, skia_inc_effects]

subdir('inc')
subdir('src')